--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-# ????????? ?????????? ??? ????? ??????? ?????
+# Указываем директорию, где будем хранить файлы (путь указывается относительно корня)
 file.directory=resource//static//files//posts
 
-# ????????? ???????????? ?????? ????? (?? ????????? 1MB)
+# Указываем максимальный размер файла (по умолчанию 1MB, что неудобно, т.к. некоторые изображения могут весить много)
 spring.servlet.multipart.max-file-size=10MB
